--- a/index.html
+++ b/index.html
@@ -1,3 +1,13 @@
+<!DOCTYPE html>
+<html>
+<head>
+    <title>My Web Page</title>
+</head>
+<body>
+    <p>Search feature placeholder text</p>
+</body>
+</html>
+
 NPM Clone Nifty Penguin Magic npm Enterprise Products Solutions Resources Docs Support Search Join Log In Build amazing
 things Essential JavaScript development tools that help you go to market faster and build powerful applications using
 modern open source code. See plans Join for free Bring the best of open source to your company npm is the tool used by
@@ -8,3 +18,4 @@ what modules within your team namespace using straightforward team management ca
 has 100% parity with all the public npm registry features your developers already use. npm audit Enjoy the security
 auditing features built into the npm client, a zero-friction way to make open source software safer. Create an Org
 just testing-MG
+Hey search
